1.12    2010-09-29      Abhijit Menon-Sen <ams@toroid.org>

    * Fix OS X build failure reported by Daniel Barker and fixed by
      Tokuhiro Matsuno.


1.11    2010-05-08      Abhijit Menon-Sen <ams@toroid.org>

    * Fix tests broken by overly optimistic floating point comparison
      and long doubles in new releases of Perl. (Thanks to Salvatore
      Bonaccorso for the report and fix.)


1.10    2009-08-06      Abhijit Menon-Sen <ams@toroid.org>

    * Compile fix for MSVC, which has no stdint.h.
      (Thanks to Taro Nishino for the report and patch.)

    (I made a mistake releasing 1.09.)


1.08    2009-08-06      Abhijit Menon-Sen <ams@toroid.org>

    * BSD license

    * Compile fix for GNU/kFreeBSD from Cyril Brulebois (via Debian)


1.07    2007-01-12      Abhijit Menon-Sen <ams@toroid.org>

    * Add the Changes file to the MANIFEST, in addition to editing it
      each time. (Thanks to John M. Gamble.)

      There have been no changes in functionality since 1.03.


1.06    2007-01-11      Abhijit Menon-Sen <ams@toroid.org>

    * Minor POD fix from Steven Schubiger.


1.05    2007-01-11      Abhijit Menon-Sen <ams@toroid.org>

    * Mingw compile fix from Steffen Mueller.


1.04    2004-10-09      Abhijit Menon-Sen <ams@wiw.org>

    * Incorporated some compile fixes from Gordon Lack.

    (1.03 had only some documentation changes.)


1.02    2004-05-07      Abhijit Menon-Sen <ams@wiw.org>

    * Added support for seeding the random number generator with an
      array of numbers, as suggested by Philip M. Feldman.

    (1.01 was not released.)


1.00    2002-02-09      Abhijit Menon-Sen <ams@wiw.org>

    * First stable release.