@@ -19,12 +19,11 @@ struct mt {
     uint32_t seed;
 };
 
-struct mt *mt_init(void);
 void mt_init_seed(struct mt *self, uint32_t seed);
+struct mt *mt_init(void);
 void mt_setup_array(struct mt *self, uint32_t *array, int n);
 void mt_free(struct mt *self);
 uint32_t mt_get_seed(struct mt *self);
-void mt_clear_seed(struct mt *self);
 double mt_genrand(struct mt *self);
 
 #endif
